tests/errors/init_state/partial_init/nested_partial_read_of_uninit_inner_field.err.expected
error: at 10:13: [INIT-UseBeforeInit] In function 'f', block 'entry': variable 'o' is used before initialization
    |
 10 |             n = copy o.i.b;
    |             ^^^^^^^^^^^^^^
